--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -19,8 +19,13 @@
             <button>Search</button>
         </form>
 
-        <p id="location"></p>
-        <p id="forecast"></p>
+        <div id="container">
+            <span id="location"></span><br>
+            <span id="currently"></span>
+            <span id="low-high"></span>
+            <span id="summary"></span>
+        </div>
+        
     </div>
 
     {{>footer}}
